force-app/main/default/objects/SYS_IntegrationLog__c/fields/data1__c.field-meta.xml
<CustomField>
    <fullName>data1__c</fullName>
    <label>data1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>