force-app/main/default/objects/SYS_IntegrationLog__c/fields/data2__c.field-meta.xml
<CustomField>
    <fullName>data2__c</fullName>
    <label>data2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>