force-app/main/default/objects/SYS_IntegrationLog__c/fields/External_Id_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Field_API_Name__c</fullName>
    <description>This field is populated from webservice for Inbound only</description>
    <label>External Id Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>