force-app/main/default/objects/SYS_IntegrationLog__c/fields/How_to_process__c.field-meta.xml
<CustomField>
    <fullName>How_to_process__c</fullName>
    <label>How to process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>use_object_setting</fullName>
                <default>true</default>
                <label>Use Object Setting</label>
            </value>
            <value>
                <fullName>use_custom_apex_handler</fullName>
                <label>Use Custom Apex Handler</label>
            </value>
            <value>
                <fullName>ignore_log</fullName>
                <label>Ignore Log</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>