force-app/main/default/objects/SYS_IntegrationLog__c/fields/is_child__c.field-meta.xml
<CustomField>
    <fullName>is_child__c</fullName>
    <formula>ISNULL( Parent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Child?</label>
    <type>Checkbox</type>
</CustomField>