force-app/main/default/objects/SYS_IntegrationLog__c/fields/ObjectSettingId__c.field-meta.xml
<CustomField>
    <fullName>ObjectSettingId__c</fullName>
    <label>ObjectSettingId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>