force-app/main/default/objects/SYS_IntegrationLog__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>SYS_IntegrationLog__c</referenceTo>
    <relationshipLabel>SYS_IntegrationLogs</relationshipLabel>
    <relationshipName>SYS_IntegrationLogs</relationshipName>
    <type>Lookup</type>
</CustomField>