force-app/main/default/objects/SYS_IntegrationLog__c/fields/QB_Entity__c.field-meta.xml
<CustomField>
    <fullName>QB_Entity__c</fullName>
    <label>QB_Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>