force-app/main/default/objects/SYS_IntegrationLog__c/fields/Request_Digest__c.field-meta.xml
<CustomField>
    <fullName>Request_Digest__c</fullName>
    <label>Request Digest</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>