force-app/main/default/objects/SYS_IntegrationLog__c/fields/Requires_process_on_complete__c.field-meta.xml
<CustomField>
    <fullName>Requires_process_on_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires process on complete</label>
    <type>Checkbox</type>
</CustomField>