force-app/main/default/objects/SYS_IntegrationLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;NEW&quot;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>DONE</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>PENDING_PARENT</fullName>
            </value>
            <value>
                <fullName>READY_FOR_PROCESSING</fullName>
                <label>READY FOR PROCESSING</label>
            </value>
            <value>
                <fullName>WAITING_FOR_PARENT</fullName>
                <label>WAITING FOR PARENT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>