force-app/main/default/objects/SYS_IntegrationLog__c/fields/SYS_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>SYS_Operation_Type__c</fullName>
    <label>SYS_Operation_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MERGE</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>UPSERT</fullName>
            </value>
            <value>
                <fullName>RESPONSE</fullName>
            </value>
            <value>
                <fullName>CDC</fullName>
            </value>
            <value>
                <fullName>INSERT</fullName>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>