force-app/main/default/objects/SYS_IntegrationLog__c/validationRules/Deliberate.validationRule-meta.xml
<ValidationRule>
    <fullName>Deliberate</fullName>
    <active>false</active>
    <errorConditionFormula>PRIORVALUE(WhatId__c) == &apos;a025f000006QN4FAAW&apos;</errorConditionFormula>
    <errorMessage>Hold</errorMessage>
</ValidationRule>